--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="container">
     <label for="input">Enter number of sides :</label>
     <input type="number" min="3" id="input">
-    <span>(number should be greater than 2)</span>
+    <!-- <span>(number should be greater than 2)</span> -->
     <button id="button" onclick="show()"> Show Polygon</button>
     </div><br>
     
     <canvas height="500" width="480" id="canvas"></canvas>
 
-
+           
    <script src="script.js"></script>
 </body>
 </html>
